A cheap fix for the animation scrollbar problem

--- a/src/state-components/sub-page-template/_sub-page-template.scss
+++ b/src/state-components/sub-page-template/_sub-page-template.scss
@@ -34,12 +34,6 @@
 // Animations //
 ////////////////
 
-html {
-  // todo add this dynamically
-  // hides the scrollbar
-  overflow: hidden;
-}
-
 [ui-view="page-content"] {
   @include transition-duration(0.25s);
 
